2007-02-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac (GNUSTEP_SYSTEM_HEADERS, GNUSTEP_NETWORK_HEADERS,
	GNUSTEP_LOCAL_HEADERS, GNUSTEP_USER_HEADERS): Changed not to
	contain LIBRARY_COMBO for the non-flattened case.  This will allow
	you to use the same configuration file across multiple
	library-combos.  Updates to rest of the code for this change.
	* common.make (GNUSTEP_HEADERS): Updated to add LIBRARY_COMBO
	at this stage (if needed).
	* configure: Regenerated.

2007-02-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	* executable.template.in (full_appname): Fixed typo.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* executable.template.in: Updated for new filesystem structure.
	Always source GNUstep.sh.  Removed code to iterate over
	Applications directories or PATH; removed code to do a separate
	computation of GNUSTEP_HOST_*.  Enhanced switching of library
	combos on the fly.  Other minor fixes.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUstep-reset.sh: Unset GNUSTEP_USER_DIR_* variables as well
	just for extra security.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-make.spec.in: Updated description and comments.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Redirect all error logging for the non-essential
	gcc and make tests to &5 (which goes into config.log).  If they
	go wrong, the user will see 'no' in the specific feature that is
	being tested, and can into config.log to check why they failed.
	* configure: Regenerated.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/java-tool.make: Store Java code in the standard
	GNUSTEP_JAVA location instead of a subdirectory of GNUSTEP_TOOLS.
	* java-executable.template: Corresponding update.  Simplify
	and update by sourcing GNUstep.sh.
	
2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-config.in: Extended help to list all the new 