@@ -1,5 +1,10 @@
 2007-02-15  Nicola Pero  <nicola.pero@meta-innovation.com>
 
+	* GNUstep.conf.in: Updated comments.  Moved NETWORK domain before
+	LOCAL domain.
+
+2007-02-15  Nicola Pero  <nicola.pero@meta-innovation.com>
+
 	* configure.ac (GNUSTEP_SYSTEM_HEADERS, GNUSTEP_NETWORK_HEADERS,
 	GNUSTEP_LOCAL_HEADERS, GNUSTEP_USER_HEADERS): Changed not to
 	contain LIBRARY_COMBO for the non-flattened case.  This will allow
